--- a/main.css
+++ b/main.css
@@ -10,6 +10,6 @@ div {
   border-bottom-color: transparent; /* and the bottom of the circle */
 }
 
-#red{
-  border-top: #f00: 
+#red {
+  border-top: #f00; 
 }
