--- a/main.css
+++ b/main.css
@@ -15,7 +15,7 @@ div {
   border-top-color: #f00;
 }
 #orange {
-  border-top: #ffa500;
+  border-top-color: #ffa500;
 }
 #yellow {
   border-top-color: #ff0;
