--- a/main.css
+++ b/main.css
@@ -23,3 +23,12 @@ div {
 #green {
   border-top-color:#00bc3f;
 }
+#blue {
+  border-top-color:#06f;
+}
+#indigo {
+  border-top-color:#8a2be2;
+}
+#violet {
+  border-top-color: #d300c9;
+}
